fixed layout issues

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -3,44 +3,15 @@
 }
 
 #post-container {
-    height: 100%;
-}
-
-#metadata-panel {
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-}
-
-#metadata-container {
-    color: white;
-    padding: @pad-unit * 0.5;
-    border-radius: @pad-unit * 0.5 @pad-unit * 0.5 0 0;
-    border: 1px solid darken(@base-color, 15%);
-    background-color: darken(@base-color, 10%);
-
-    position: relative;
-    margin: auto;
-    width: 80%;
+    height: 90%;
 }
 
 #edit-panel {
-    padding: @pad-unit;
-    height: 90%;
+    padding: 1%;
+    height: 100%;
     margin: auto;
     max-width: 960px;
     width: 80%;
-}
-
-#metadata-collapser {
-    display: block;
-    border-radius: @pad-unit * 0.2;
-    text-align: center;
-    width: 95%;
-    margin: auto;
-    cursor: pointer;
-    height: @pad-unit * 0.5;
-    background-color: darken(@base-color, 20%);
 }
 
 .post-common {
@@ -56,7 +27,7 @@
 
 .post-content-common {
     .post-common;
-    height: 70%;
+    height: 90%;
     font-family: 'goudy';
     font-size: @base-font-size * 1.1;
     line-height: @base-line-height * 1.2;
@@ -83,10 +54,6 @@
     border: 1px dotted darken(@line-color, 10%);
 }
 
-#post-container {
-    height: 100%;
-}
-
 #status-panel {
     display: block;
     float: right;
@@ -96,4 +63,43 @@
     color: lighten(@text-color, 20%);
     text-align: right;
     width: 30%;
+}
+
+
+#metadata-panel {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
+
+#metadata-container {
+    padding: @pad-unit * 0.5;
+    border-radius: @pad-unit * 0.5 @pad-unit * 0.5 0 0;
+    border: 1px solid darken(@base-color, 15%);
+    background-color: darken(@base-color, 10%);
+
+    position: relative;
+    margin: auto;
+    width: 80%;
+}
+
+#metadata-collapser {
+    display: block;
+    border-radius: @pad-unit * 0.2;
+    text-align: center;
+    width: 95%;
+    margin: auto;
+    cursor: pointer;
+    height: @pad-unit * 0.5;
+    background-color: darken(@base-color, 20%);
+}
+
+#post-metadata {
+     label {
+        float: left;
+    }
+
+    .field-group-excerpt {
+        width: 90%;
+    }
 }
