--- a/styles/lists.less
+++ b/styles/lists.less
@@ -26,6 +26,7 @@
     font-size: @base-font-size * 1.4;
     float: right;
     margin-left: @pad-unit;
+    cursor: pointer;
   }
   .item-date {
     font-size: @base-font-size;
