--- a/styles/style.less
+++ b/styles/style.less
@@ -24,7 +24,7 @@ body, input, textarea, button {
 }
 
 .main-container {
-  height: 99%;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
@@ -32,6 +32,7 @@ body, input, textarea, button {
 nav {
   height: 5%;
   overflow: hidden;
+  padding: 1%;
 
   ul {
     margin: 0;
@@ -44,5 +45,5 @@ nav {
 }
 
 #main-panel {
-  height: 90%;
+  height: 88%;
 }
